# storage

./: pyproject.toml
hackspace_storage/: __init__.py  booking_rules.py  database.py  demo_data.py  login.py  mailer.py  models.py  nightly.py  token.py
hackspace_storage/main/: forms.py  views.py
hackspace_storage/static/css/: style.css
hackspace_storage/templates/: base.html  base_restricted.html  wtforms.html
hackspace_storage/templates/email/: expired.j2  expired.txt.j2  expiry_reminder.txt.j2  slot_booked.txt.j2
hackspace_storage/templates/main/: book_slot.html  close_page_restricted.html  delete_booking.html  delete_booking_restricted.html  index.html
migrations/versions/: 1f2bb1b4804e_login_remindme.py  60a94ca301c3_initial_migration.py  73ba2491b303_initial_migration.py  c666a50993e5_booking_secret.py
